refactor: 엔티티 생성 로직 메서드화, bulkInsert 최적화